--- a/booksClassification.ipynb
+++ b/booksClassification.ipynb
@@ -42,7 +42,7 @@
     }
    ],
    "source": [
-    "dataset = pd.read_csv(\"Alecsandru M. Anca-Giorgiana.csv\")\n",
+    "dataset = pd.read_csv(\"dataset.csv\")\n",
     "print(len(dataset.columns))\n",
     "#dataset.head(2)"
    ]
